--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 
-<hmtl>
+<html>
 
     <head>
 
     </head>
 
     <body>
-        Hello World!
+
+        Hello World
+        
     </body>
 
-</hmtl>
+</html>
