--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
 
     <body>
 
-        Hello World
-        
+        <div>
+            <h1> Andrew Huang </h1>
+        </div>
+
+        <div>
+            <p>
+                <h2> List of accomplishments: </h2>
+                <ul>
+                    <h3>Highschool: </h3>
+                    <li>FIRST Robotics Team STEAM Control Systems Director</li>
+                    <h3>Freshman Year: </h3>
+                    <li>Association for Computing Machinery Engineering Student Council Representative</li>
+                    <h3>Sophomore Year: </h3>
+                    <li>Association for Computing Machinery BugSmashers Co-Chair</li>
+                </ul>
+
+            </p>    
+        </div>
+
     </body>
 
 </html>
