--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <link type="text/css" rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
