--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="static/styles/index.css">
     </head>
 
     <body>
