--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
         <div>
             <p>
+                <h2> Links: </h2>
+                <a href="activities.html">Activities</a> <br>
+                <a href="activities.html">Activities</a> <br>
+                <a href="activities.html">Activities</a> <br>
+
+            </p>
+
+            <p>
                 <h2> List of accomplishments: </h2>
                 <ul>
                     <h3>Highschool: </h3>
