added css file for activities page

--- a/html/activities.html
+++ b/html/activities.html
@@ -6,8 +6,21 @@
         
     </head>
 
-    
+
     <body>
+        <h1>Activities</h1>
+        <p>
+            <h2> List of accomplishments: </h2>
+            <ul>
+                <h3>Highschool: </h3>
+                <li>FIRST Robotics Team STEAM Control Systems Director</li>
+                <h3>Freshman Year: </h3>
+                <li>Association for Computing Machinery Engineering Student Council Representative</li>
+                <h3>Sophomore Year: </h3>
+                <li>Association for Computing Machinery BugSmashers Co-Chair</li>
+            </ul>
+
+        </p>    
 
     </body>
 
