--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div>
             <p>
                 <h2> Links: </h2>
-                <a href="activities.html">Activities</a> <br>
-                <a href="activities.html">Activities</a> <br>
-                <a href="activities.html">Activities</a> <br>
+                <a href="html/activities.html">Activities</a> <br>
+                <a href="html/activities.html">Activities</a> <br>
+                <a href="html/activities.html">Activities</a> <br>
 
             </p>
 
