--- a/html/activities.html
+++ b/html/activities.html
@@ -3,24 +3,35 @@
 <html>
 
     <head>
+        <link rel="stylesheet" href="../static/styles/activities.css">
         
     </head>
 
-
     <body>
-        <h1>Activities</h1>
-        <p>
-            <h2> List of accomplishments: </h2>
-            <ul>
-                <h3>Highschool: </h3>
-                <li>FIRST Robotics Team STEAM Control Systems Director</li>
-                <h3>Freshman Year: </h3>
-                <li>Association for Computing Machinery Engineering Student Council Representative</li>
-                <h3>Sophomore Year: </h3>
-                <li>Association for Computing Machinery BugSmashers Co-Chair</li>
-            </ul>
+        <div id="title">
 
-        </p>    
+            <h1>Activities</h1>
+            <h2> List of accomplishments: </h2>
+
+        </div>
+
+        <div id="activities">
+            <div>
+                <h3>Highschool: </h3>
+                FIRST Robotics Team STEAM Control Systems Director <br>
+            </div>
+
+            <div>
+                <h3>Freshman Year: </h3>
+                Association for Computing Machinery Engineering Student Council Representative <br>
+            </div>
+
+            <div>
+                <h3>Sophomore Year: </h3>
+                Association for Computing Machinery BugSmashers Co-Chair <br>
+            </div>
+        </div>
+           
 
     </body>
 
