--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <p>
                 <h2> Links: </h2>
                 <a href="html/activities.html">Activities</a> <br>
-                <a href="html/activities.html">Activities</a> <br>
-                <a href="html/activities.html">Activities</a> <br>
+                <a href="html/links.html">Links</a> <br>
 
             </p>
 
