--- a/html/links.html
+++ b/html/links.html
@@ -16,19 +16,13 @@
 
         <div id="links">
             <div>
-                <h3>Github</h3>
-                <link rel="website" href="">
+                <a href="https://github.com/andrewhuang2019">GitHub</a>
             </div>
 
             <div>
-                <h3></h3>
-                Association for Computing Machinery Engineering Student Council Representative <br>
+                <a href="https://www.linkedin.com/in/andrew-l-huang/">LinkedIn</a>
             </div>
 
-            <div>
-                <h3>Sophomore Year: </h3>
-                Association for Computing Machinery BugSmashers Co-Chair <br>
-            </div>
         </div>
            
 
