--- a/html/activities.html
+++ b/html/activities.html
@@ -11,11 +11,11 @@
         <div id="title">
 
             <h1>Activities</h1>
-            <h2> List of accomplishments: </h2>
 
         </div>
 
-        <div id="activities">
+        <h2>Leadership</h2>
+        <div id="leadership">
             <div>
                 <h3>Highschool: </h3>
                 FIRST Robotics Team STEAM Control Systems Director <br>
@@ -31,7 +31,19 @@
                 Association for Computing Machinery BugSmashers Co-Chair <br>
             </div>
         </div>
-           
+
+        <h2>Scholarships</h2>
+        <div id="scholarship">
+            <div>
+                <h3>Vann Family Future Leaders Program</h3>
+
+            </div>
+
+            <div>
+                <h3>Kansas Blockchain Fellowship</h3>
+
+            </div>
+        </div>
 
     </body>
 
