--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     </head>
 
     <body>
+        <h2> Links: </h2>
 
-        <div>
-            <h1> Andrew Huang </h1>
-        </div>
+        <div id="pages-bar">
 
-        <div>
-
-                <h2> Links: </h2>
                 <a href="html/activities.html">Activities</a> <br>
+
                 <a href="html/links.html">Links</a> <br>
 
+        </div>
+
+        <div id="container">
+            <h1> Andrew Huang </h1>
         </div>
 
     </body>
