--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     </head>
 
     <body>
-        <h2> Links: </h2>
 
         <div id="pages-bar">
 
-                <a href="html/activities.html">Activities</a> <br>
+                <a class="page-button" href="html/activities.html">Activities</a> <br>
 
-                <a href="html/links.html">Links</a> <br>
+                <a class="page-button" href="html/links.html">Links</a> <br>
 
         </div>
 
