--- a/html/activities.html
+++ b/html/activities.html
@@ -9,6 +9,16 @@
 
     <body>
         <div id="activities-background" class="vertical-container">
+
+            <div id="pages-bar">
+
+                <a class="page-button" href="../index.html">Home</a> <br>
+
+                <a class="page-button" href="links.html">Links</a> <br>
+
+            </div>
+
+
             <div id="title">
 
                 <h1>Activities</h1>
