--- a/html/activities.html
+++ b/html/activities.html
@@ -14,10 +14,11 @@
 
                 <a class="page-button" href="../index.html">Home</a> <br>
 
+                <a class="page-button" href="activities.html">Activities</a> <br>
+
                 <a class="page-button" href="links.html">Links</a> <br>
 
             </div>
-
 
             <div id="title">
 
