--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
         <div id="pages-bar">
 
+                <a class="page-button" href="index.html">Home</a> <br>
+
                 <a class="page-button" href="html/activities.html">Activities</a> <br>
 
                 <a class="page-button" href="html/links.html">Links</a> <br>
