Updated pages bar
Updated pages bar to be the same for every page, and content to be aligned on each page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         </div>
 
         <div id="container">
-            <h1> Andrew Huang </h1>
+
+            <div id="title">
+                <h1> Andrew Huang </h1>
+            </div>
+
         </div>
 
     </body>
