--- a/html/activities.html
+++ b/html/activities.html
@@ -14,6 +14,8 @@
 
             <a class="page-button" href="activities.html">Activities</a> <br>
 
+            <a class="page-button" href="projects.html">Projects</a> <br>
+
             <a class="page-button" href="links.html">Links</a> <br>
 
         </div>
