--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
                 <a class="page-button" href="html/activities.html">Activities</a> <br>
 
+                <a class="page-button" href="html/projects.html">Projects</a> <br>
+
                 <a class="page-button" href="html/links.html">Links</a> <br>
 
         </div>
