--- a/html/projects.html
+++ b/html/projects.html
@@ -22,6 +22,22 @@
 
         </div>
 
+        <div>
+            Projects
+        </div>
+
+        <div>
+            Currently, I am working on many different projects to expand my knowledge on all of the computer science topics! <br>
+            Some of these projects include:
+            <ul>
+                <li>Personal Website (this XD)</li>
+                <li>Machine learning model used in games</li>
+                <li>Application of blockchain in frontend/backend development</li>
+                <li>Mobile App development</li>
+            </ul> <br>
+            Any other projects that I have can be found on my GitHub on my "Links" page. Do pay a visit if you are interested!!!
+        </div>
+
 
     </body>
 
