--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
                 <a class="page-button" href="html/activities.html">Activities</a> <br>
 
+                <a class="page-button" href="html/scholarships.html">Scholarships</a> <br>
+
                 <a class="page-button" href="html/projects.html">Projects</a> <br>
 
                 <a class="page-button" href="html/links.html">Links</a> <br>
@@ -24,6 +26,11 @@
 
             <div id="title">
                 <h1> Andrew Huang </h1>
+            </div>
+
+            <div>
+                Hello! My name is Andrew Huang! I am a sophomore student at The University of Kansas, double majoring in Computer Science and Mathematics. <br>
+                In my time at KU, I have been involved in many different activites, projects, and scholarships which you can see at the top of the page! <br>
             </div>
 
         </div>
