--- a/html/scholarships.html
+++ b/html/scholarships.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <link rel="stylesheet" href="../static/styles/projects.css">
+        <link rel="stylesheet" href="../static/styles/scholarships.css">
 
     </head>
 
@@ -24,20 +24,22 @@
 
         </div>
 
-        <div>
-            Scholarships
+        <div id="title">
+            <h1>Scholarships</h1>
         </div>
 
-        <div>
-            Currently, I am working on many different projects to expand my knowledge on all of the computer science topics! <br>
-            Some of these projects include:
-            <ul>
-                <li>Personal Website (this XD)</li>
-                <li>Machine learning model used in games</li>
-                <li>Application of blockchain in frontend/backend development</li>
-                <li>Mobile App development</li>
-            </ul> <br>
-            Any other projects that I have can be found on my GitHub on my "Links" page. Do pay a visit if you are interested!!!
+        <div id="scholarship">
+            <div class="vertical-container3">
+                <h3>Vann Family Future Leaders Program</h3>
+                Engineering scholarship in which future leaders<br>
+            </div>
+
+            <div class="vertical-container3">
+                <h3>Kansas Blockchain Fellowship</h3>
+                Fellowship in which students learn about Blockchain together with mentors, <br>
+                and design/build a project with the knowledge they've learned.<br>
+
+            </div>
         </div>
 
 
