--- a/html/projects.html
+++ b/html/projects.html
@@ -24,8 +24,8 @@
 
         </div>
 
-        <div>
-            Projects
+        <div id="title">
+            <h1>Projects</h1>
         </div>
 
         <div>
