--- a/html/links.html
+++ b/html/links.html
@@ -30,11 +30,11 @@
         </div>
 
         <div id="links">
-            <div>
+            <div class="link">
                 <a href="https://github.com/andrewhuang2019">GitHub</a>
             </div>
 
-            <div>
+            <div class="link">
                 <a href="https://www.linkedin.com/in/andrew-l-huang/">LinkedIn</a>
             </div>
 
